test/spec_vectors/simd_f32x4/fail/module_9.wat
(module (func (result v128) (f32x4.abs (i32.const 0))))